more fixes on mobile

--- a/wp-content/themes/coronadenktank/sass/theme/_child_theme.scss
+++ b/wp-content/themes/coronadenktank/sass/theme/_child_theme.scss
@@ -1,11 +1,3 @@
-#main-nav .navbar-group {
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-
 .site-name {
   word-wrap: break-word;
   flex-shrink: 1;
